--- a/QuartzScheduler.Web/appsettings.json
+++ b/QuartzScheduler.Web/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "MySqlConnection": "server=127.0.0.1;userid=sa;pwd=123456;port=3306;database=quartz_scheduler;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
