--- a/QuartzScheduler.Infrastructure/QuartzScheduler.Infrastructure.csproj
+++ b/QuartzScheduler.Infrastructure/QuartzScheduler.Infrastructure.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Quartz" Version="3.0.0-beta1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
